--- a/src/templates/header.html
+++ b/src/templates/header.html
@@ -1,6 +1,13 @@
 <header class="header container">
-    <div class="logo logo__heder"></div>
-    <h1 class="header__title"></h1>
-    <p class="header__text"></p>
-    <a href="" class="scroll"></a>
+    <section class="header__box">
+        <div class="logo header__logo"><img src="../images/logo.svg" alt="logo"></div>
+        <h1 class="header__title">WORKING&emsp;&emsp;&emsp;
+            WITH DESIGN LAB
+        </h1>
+        <p class="header__text">We’ve been helping startups launch and grow their businesses. We help you to fill the
+            gap
+            between development,
+            design and product management.</p>
+        <a href="" class="scroll"></a>
+    </section>
 </header>
