--- a/src/css/core/_vars.scss
+++ b/src/css/core/_vars.scss
@@ -2,6 +2,9 @@
 $btn-color: black;
 $text-black-color: black;
 $text-white-color: white;
+$bg-white-color: white;
+$border-white-color: white;
+$border-black-color: black;
 
 $max-width: 1920px;
 
