--- a/src/css/components/_header.scss
+++ b/src/css/components/_header.scss
@@ -1,4 +1,5 @@
 .header {
+  @extend %container;
   background-image: url(../images/header.png);
   background-size: cover;
   background-position: center center;
@@ -11,13 +12,25 @@
     flex-direction: column;
   }
   &__logo {
-    display: flex;
-    justify-content: center;
+    @extend %flex-center;
     padding-top: 23%;
-    margin-bottom: 95px;
+    margin-bottom: 5%;
   }
   &__title {
-    @include text($H700, 400, $text-white-color);
+    @include text($H700, 700, $text-white-color);
     text-align: center;
+    margin-bottom: 55px;
+  }
+  &__text {
+    max-width: 574px;
+    @include text($H200, 400, $text-white-color);
+    text-align: center;
+    margin-bottom: 50px;
+  }
+  &__scroll {
+    position: absolute;
+
+    left: 50%;
+    transform: translateX(-50%);
   }
 }
