--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -7,3 +7,7 @@
 @import "./core/common";
 
 @import "./components/header";
+@import "./components/about";
+@import "./components/services";
+@import "./components/whatwedo";
+@import "./components/common/scroll";
