--- a/src/templates/header.html
+++ b/src/templates/header.html
@@ -1,13 +1,14 @@
-<header class="header container">
+<header class="header">
     <section class="header__box">
         <div class="logo header__logo"><img src="../images/logo.svg" alt="logo"></div>
-        <h1 class="header__title">WORKING&emsp;&emsp;&emsp;
+        <h1 class="header__title">&emsp;&emsp;WORKING&emsp;&emsp;
             WITH DESIGN LAB
         </h1>
-        <p class="header__text">We’ve been helping startups launch and grow their businesses. We help you to fill the
-            gap
-            between development,
+        <p class="header__text">&emsp;&emsp;&emsp;&emsp;&emsp;We’ve been helping startups
+            launch and grow their businesses.&emsp;&emsp;&emsp;&emsp;&emsp;
+            &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;We help you to fill the gap
+            between development,&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;
             design and product management.</p>
-        <a href="" class="scroll"></a>
+        <a href="" class="scroll header__scroll"></a>
     </section>
 </header>
