--- a/src/css/core/_inheritance.scss
+++ b/src/css/core/_inheritance.scss
@@ -16,3 +16,10 @@
   display: flex;
   justify-content: center;
 }
+%img-setting {
+  background-size: cover;
+  background-position: center center;
+  position: relative;
+  padding-left: 47px;
+  padding-top: 170px;
+}
