--- a/src/css/core/_vars.scss
+++ b/src/css/core/_vars.scss
@@ -1,10 +1,11 @@
 // color //
-$btn-color: black;
-$text-black-color: black;
+$btn-color: #393939;
+$text-black-color: #393939;
 $text-white-color: white;
 $bg-white-color: white;
 $border-white-color: white;
-$border-black-color: black;
+$border-black-color: #393939;
+$bg-btn-color: #393939;
 
 $max-width: 1920px;
 
