--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -10,4 +10,6 @@
 @import "./components/about";
 @import "./components/services";
 @import "./components/whatwedo";
+@import "./components/gallery";
+@import "./components/footer";
 @import "./components/common/scroll";
