--- a/src/templates/gallery.html
+++ b/src/templates/gallery.html
@@ -1,4 +1,4 @@
-<section class="gallery">
+<section class="container gallery">
 
     <div class="gallery__container">
         <div class="gallery__img1">TOPWORKZ</div>
