--- a/src/templates/whatwedo.html
+++ b/src/templates/whatwedo.html
@@ -1,4 +1,4 @@
-<section class="what-we-do">
+<section class="container what-we-do">
     <div class="what-we-do__container">
         <div class="what-we-do__box">
             <fieldset class="what-we-do__border">
