--- a/src/templates/about.html
+++ b/src/templates/about.html
@@ -1,4 +1,4 @@
-<Section id="about" class="about">
+<Section id="about" class="container about">
     <div class="about__container">
         <div class="about__box">
             <fieldset class="about__border">
