--- a/src/templates/footer.html
+++ b/src/templates/footer.html
@@ -1,4 +1,4 @@
-<section class="footer">
+<section class="container footer">
     <div class="footer__container">
         <div class="footer__box">
             <fieldset class="footer__border">
