--- a/src/templates/services.html
+++ b/src/templates/services.html
@@ -1,4 +1,4 @@
-<section class="container services">
+<section class="services">
     <div class="services__container">
         <div class="services__box">
             <fieldset class="services__border">
