--- a/src/css/components/_header.scss
+++ b/src/css/components/_header.scss
@@ -6,6 +6,7 @@
   position: relative;
   min-height: 100vh;
   &__box {
+    width: 574px;
     margin: 0 auto;
     display: flex;
     flex-direction: column;
@@ -21,6 +22,7 @@
     margin-bottom: 55px;
   }
   &__text {
+    width: 574px;
     @include text($H200, 400, $text-white-color);
     text-align: center;
     margin-bottom: 50px;
