--- a/src/templates/header.html
+++ b/src/templates/header.html
@@ -1,5 +1,5 @@
 <header class="header">
-    <section class="container header__box">
+    <section class="header__box">
         <div class="logo header__logo"><img src="../images/logo.svg" alt="logo"></div>
         <h1 class="header__title">WORKING<br>
             WITH DESIGN LAB
