--- a/src/templates/footer.html
+++ b/src/templates/footer.html
@@ -1,8 +1,8 @@
-<section class="footer">
+<section class="container-padding footer">
     <div class="footer__container">
         <div class="footer__box">
             <fieldset class="footer__border">
-                <legend align="center">&emsp;&emsp;&emsp;CONTACT US&emsp;&emsp;&emsp;</legend>
+                <legend align="center">&emsp;&emsp;&emsp;&emsp;CONTACT US&emsp;&emsp;&emsp;&emsp;</legend>
                 <p class="footer__text">Planning and development is iterative. Because we are constantly coding and<br>
                     testing, the
                     products we build are always ready to go live. This iterative process<br> allows for changes as
