--- a/src/templates/gallery.html
+++ b/src/templates/gallery.html
@@ -1,12 +1,14 @@
-<section class="gallery">
+<section class="container-padding gallery">
 
-    <div class="gallery__container">
-        <div class="gallery__img1">TOPWORKZ</div>
-        <div class="gallery__img2">JOINT</div>
-        <div class="gallery__img3">MARKET</div>
-        <div class="gallery__img4">WORKTOP</div>
-        <div class="gallery__img5">LABLE</div>
-        <div class="gallery__img6">KYIV</div>
+    <div class="gallery__container-wrapper">
+        <div class="gallery__container">
+            <div class="gallery__img1">TOPWORKZ</div>
+            <div class="gallery__img2">JOINT</div>
+            <div class="gallery__img3">MARKET</div>
+            <div class="gallery__img4">WORKTOP</div>
+            <div class="gallery__img5">LABLE</div>
+            <div class="gallery__img6">KYIV</div>
+        </div>
     </div>
 
 </section>
