--- a/src/templates/whatwedo.html
+++ b/src/templates/whatwedo.html
@@ -1,8 +1,8 @@
-<section class="what-we-do">
+<section class="container-padding what-we-do">
     <div class="what-we-do__container">
         <div class="what-we-do__box">
             <fieldset class="what-we-do__border">
-                <legend align="center">&emsp;&emsp;&emsp;WHAT WE DO&emsp;&emsp;&emsp;</legend>
+                <legend align="center">&emsp;&emsp;&emsp;&emsp;WHAT WE DO&emsp;&emsp;&emsp;&emsp;</legend>
                 <div class="what-we-do__design-box">
                     <div class="what-we-do__picture-wrapper">
                         <img class="what-we-do__picture" src="../images/design.svg" alt="DESIGN">
