--- a/src/css/components/_gallery.scss
+++ b/src/css/components/_gallery.scss
@@ -1,8 +1,17 @@
 .gallery {
+  &__container-wrapper {
+    display: flex;
+    justify-content: center;
+  }
+
   &__container {
     display: grid;
-    grid-template-columns: 1fr 1.4fr 1fr;
-    grid-auto-rows: 237px;
+
+    grid-template-columns: minmax(50px, 1300px) minmax(100px, 3000px) minmax(
+        50px,
+        1300px
+      );
+    grid-auto-rows: minmax(100px, auto);
     grid-gap: 10px;
   }
   &__img1 {
