--- a/src/css/core/_common.scss
+++ b/src/css/core/_common.scss
@@ -16,8 +16,7 @@ a {
   text-decoration: none;
 }
 
-.container {
-  @extend %container;
+.container-padding {
   padding-left: 24px;
   padding-right: 24px;
   @media screen and (min-width: $screen-desktop-large) {
