--- a/src/templates/header.html
+++ b/src/templates/header.html
@@ -1,4 +1,4 @@
-<header class="header">
+<header class="container-padding header">
     <section class="header__box">
         <div class="logo header__logo"><img src="../images/logo.svg" alt="logo"></div>
         <h1 class="header__title">WORKING<br>
