--- a/src/css/core/_inheritance.scss
+++ b/src/css/core/_inheritance.scss
@@ -20,8 +20,8 @@
   background-size: cover;
   background-position: center center;
   position: relative;
-  padding-left: 47px;
-  padding-top: 170px;
+  padding-top: 100px;
+  text-align: center;
 }
 %img-hover {
   cursor: pointer;
