--- a/src/css/core/_vars.scss
+++ b/src/css/core/_vars.scss
@@ -18,6 +18,7 @@ $H700: calcRem(54px);
 $H600: calcRem(34px);
 $H500: calcRem(30px);
 $H400: calcRem(20px);
+$H350: calcRem(18px);
 $H300: calcRem(16px);
 $H200: calcRem(15px);
 $H100: calcRem(14px);
