--- a/src/css/components/_gallery.scss
+++ b/src/css/components/_gallery.scss
@@ -6,18 +6,49 @@
 
   &__container {
     display: grid;
-
     grid-template-columns: minmax(50px, 1300px) minmax(100px, 3000px) minmax(
         50px,
         1300px
       );
-    grid-auto-rows: minmax(100px, auto);
+    grid-auto-rows: minmax(1fr, 1fr);
     grid-gap: 10px;
+
+    @media screen and (min-width: $screen-iphone) {
+      display: grid;
+      grid-template-columns: minmax(50px, 1300px);
+      grid-auto-rows: minmax(1fr, 1fr);
+      grid-gap: 10px;
+    }
+
+    @media screen and (min-width: $screen-iphone-plus) {
+      display: grid;
+      grid-template-columns: minmax(50px, 1300px) minmax(50px, 1300px);
+      grid-auto-rows: minmax(1fr, 1fr);
+      grid-gap: 10px;
+    }
+
+    @media screen and (min-width: $screen-tablet) {
+      display: grid;
+
+      grid-template-columns: minmax(50px, 1300px) minmax(100px, 3000px) minmax(
+          50px,
+          1300px
+        );
+      grid-auto-rows: minmax(1fr, 1fr);
+      grid-gap: 10px;
+    }
   }
   &__img1 {
     background-image: url(../images/topworkz.png);
     @extend %img-setting;
-    @include text($H600, 700, $text-white-color);
+    @include text($H350, 700, $text-white-color);
+    @media screen and (min-width: $screen-tablet) {
+      @include text($H600, 700, $text-white-color);
+    }
+    @media screen and (min-width: $screen-desktop) {
+      padding-left: 47px;
+      text-align: left;
+    }
   }
   &__img1:hover {
     @extend %img-hover;
@@ -26,7 +57,14 @@
   &__img2 {
     background-image: url(../images/joint.png);
     @extend %img-setting;
-    @include text($H600, 700, $text-white-color);
+    @include text($H350, 700, $text-white-color);
+    @media screen and (min-width: $screen-tablet) {
+      @include text($H600, 700, $text-white-color);
+    }
+    @media screen and (min-width: $screen-desktop) {
+      padding-left: 47px;
+      text-align: left;
+    }
   }
   &__img2:hover {
     @extend %img-hover;
@@ -35,7 +73,14 @@
   &__img3 {
     background-image: url(../images/market.png);
     @extend %img-setting;
-    @include text($H600, 700, $text-white-color);
+    @include text($H350, 700, $text-white-color);
+    @media screen and (min-width: $screen-tablet) {
+      @include text($H600, 700, $text-white-color);
+    }
+    @media screen and (min-width: $screen-desktop) {
+      padding-left: 47px;
+      text-align: left;
+    }
   }
   &__img3:hover {
     @extend %img-hover;
@@ -44,7 +89,14 @@
   &__img4 {
     background-image: url(../images/worktop.png);
     @extend %img-setting;
-    @include text($H600, 700, $text-white-color);
+    @include text($H350, 700, $text-white-color);
+    @media screen and (min-width: $screen-tablet) {
+      @include text($H600, 700, $text-white-color);
+    }
+    @media screen and (min-width: $screen-desktop) {
+      padding-left: 47px;
+      text-align: left;
+    }
   }
   &__img4:hover {
     @extend %img-hover;
@@ -53,7 +105,14 @@
   &__img5 {
     background-image: url(../images/lable.png);
     @extend %img-setting;
-    @include text($H600, 700, $text-white-color);
+    @include text($H350, 700, $text-white-color);
+    @media screen and (min-width: $screen-tablet) {
+      @include text($H600, 700, $text-white-color);
+    }
+    @media screen and (min-width: $screen-desktop) {
+      padding-left: 47px;
+      text-align: left;
+    }
   }
   &__img5:hover {
     @extend %img-hover;
@@ -63,7 +122,14 @@
   &__img6 {
     background-image: url(../images/kyiv.png);
     @extend %img-setting;
-    @include text($H600, 700, $text-white-color);
+    @include text($H350, 700, $text-white-color);
+    @media screen and (min-width: $screen-tablet) {
+      @include text($H600, 700, $text-white-color);
+    }
+    @media screen and (min-width: $screen-desktop) {
+      padding-left: 47px;
+      text-align: left;
+    }
   }
   &__img6:hover {
     @extend %img-hover;
