--- a/src/css/components/_header.scss
+++ b/src/css/components/_header.scss
@@ -5,10 +5,12 @@
   position: relative;
   min-height: 100vh;
   &__box {
-    width: 574px;
-    margin: 0 auto;
-    display: flex;
-    flex-direction: column;
+    @media screen and (min-width: $screen-tablet) {
+      width: 574px;
+      margin: 0 auto;
+      display: flex;
+      flex-direction: column;
+    }
   }
   &__logo {
     @extend %flex-center;
@@ -21,7 +23,6 @@
     margin-bottom: 55px;
   }
   &__text {
-    width: 574px;
     @include text($H200, 400, $text-white-color);
     text-align: center;
     margin-bottom: 50px;
