--- a/src/css/components/_services.scss
+++ b/src/css/components/_services.scss
@@ -6,6 +6,10 @@
 
   &__container {
     @extend %padding-container;
+    @media screen and (min-width: $screen-desktop) {
+      padding-top: 160px;
+      padding-bottom: 160px;
+    }
   }
   &__box {
     @extend %box;
