--- a/src/templates/about.html
+++ b/src/templates/about.html
@@ -8,12 +8,12 @@
                     with
                     us, you are
                     part of a team of committed
-                    collaborators.<br>
-                    All aspects of our software development process are integrated, iterative and<br> agile.</p>
-                <p class="about__text-second">Our approach unifies design, development and<br>
-                    product management to create exceptional products.<br>
-                    We start each project by understanding your business goals,<br>
-                    the user’s needs and the product requirements.<br>
+                    collaborators.
+                    All aspects of our software development process are integrated, iterative and agile.</p>
+                <p class="about__text-second">Our approach unifies design, development and
+                    product management to create exceptional products.
+                    We start each project by understanding your business goals,
+                    the user’s needs and the product requirements.
                     Then we help translate them into effective and elegant solutions.
                 </p>
             </fieldset>
