--- a/src/templates/whatwedo.html
+++ b/src/templates/whatwedo.html
@@ -9,9 +9,9 @@
                     </div>
                     <p class="what-we-do__title">DESIGN</p>
                     <p class="what-we-do__text">Our design practice offers a full range of services including branding
-                        strategy,<br>
-                        interaction and visual design and user experience testing.<br>
-                        Throughout your project, our designers create and implement visual designs and workflows,<br>
+                        strategy,
+                        interaction and visual design and user experience testing.
+                        Throughout your project, our designers create and implement visual designs and workflows,
                         solicit user feedback, and work with you to make sure what gets built is what is needed.
                     </p>
                 </div>
@@ -21,8 +21,8 @@
                     </div>
                     <p class="what-we-do__title">DEVELOPMENT</p>
                     <p class="what-we-do__text">All engineers are fluent in the latest enterprise, mobile and web
-                        development technologies.<br>
-                        They collaborate with your team to write, test, and improve code on a daily basis, using<br>
+                        development technologies.
+                        They collaborate with your team to write, test, and improve code on a daily basis, using
                         proven
                         practices such as test-driven development and pair programing.</p>
                 </div>
@@ -32,8 +32,8 @@
                     </div>
                     <p class="what-we-do__title">PRODUCT MANAGMENT</p>
                     <p class="what-we-do__text">Planning and development is iterative. Because we are constantly coding
-                        and testing, the<br> products we build are always ready to go live. This iterative process
-                        allows for changes as<br> business requirements evolve. </p>
+                        and testing, the products we build are always ready to go live. This iterative process
+                        allows for changes as business requirements evolve. </p>
                 </div>
             </fieldset>
         </div>
