--- a/src/templates/footer.html
+++ b/src/templates/footer.html
@@ -3,9 +3,9 @@
         <div class="footer__box">
             <fieldset class="footer__border">
                 <legend align="center">&emsp;&emsp;&emsp;&emsp;CONTACT US&emsp;&emsp;&emsp;&emsp;</legend>
-                <p class="footer__text">Planning and development is iterative. Because we are constantly coding and<br>
+                <p class="footer__text">Planning and development is iterative. Because we are constantly coding and
                     testing, the
-                    products we build are always ready to go live. This iterative process<br> allows for changes as
+                    products we build are always ready to go live. This iterative process allows for changes as
                     business requirements evolve. </p>
 
                 <div class="footer__container-button">
