--- a/src/templates/services.html
+++ b/src/templates/services.html
@@ -4,9 +4,9 @@
             <fieldset class="services__border">
                 <legend align="center">&emsp;&emsp;&emsp;&emsp;SERVICES&emsp;&emsp;&emsp;&emsp;</legend>
                 <p class="services__text">Before we sign a contract or write a line of code our team will spend the
-                    neces-<br>sary time needed to understand your product vision.<br>
-                    The outcome of this scoping session is a proposal or high-level statement of<br> work.
-                    Based on your requirements, we can provide a complete offering or just the<br> pieces you need.
+                    necessary time needed to understand your product vision.
+                    The outcome of this scoping session is a proposal or high-level statement of work.
+                    Based on your requirements, we can provide a complete offering or just the pieces you need.
             </fieldset>
         </div>
     </div>
