--- a/src/css/core/_inheritance.scss
+++ b/src/css/core/_inheritance.scss
@@ -27,3 +27,8 @@
   cursor: pointer;
   transition: 1s;
 }
+%text-padding-lrb {
+  padding-left: 12px;
+  padding-right: 12px;
+  padding-bottom: 24px;
+}
