--- a/src/css/core/_vars.scss
+++ b/src/css/core/_vars.scss
@@ -22,6 +22,7 @@ $H350: calcRem(18px);
 $H300: calcRem(16px);
 $H200: calcRem(15px);
 $H100: calcRem(14px);
+$H50: calcRem(11px);
 
 $base-font: "Lato";
 
