--- a/src/templates/footer.html
+++ b/src/templates/footer.html
@@ -8,7 +8,7 @@
                     products we build are always ready to go live. This iterative process allows for changes as
                     business requirements evolve. </p>
 
-                <div class="footer__container-button">
+                <div class="container-padding footer__container-button">
                     <a class="footer__button" href="">CONTACT US</a>
                 </div>
             </fieldset>
