--- a/src/css/components/_about.scss
+++ b/src/css/components/_about.scss
@@ -10,45 +10,42 @@
     @extend %box;
   }
   &__border {
-    @include text($H600, 700, $text-black-color);
-    padding-top: 65px;
+    @include text($H350, 700, $text-black-color);
+    padding-top: 24px;
     border: 2px solid $border-black-color;
-    @media screen and (min-width: $screen-iphone) {
-      @include text($H350, 700, $text-black-color);
-      padding-top: 12px;
-    }
     @media screen and (min-width: $screen-tablet) {
       @include text($H600, 700, $text-black-color);
+    }
+    @media screen and (min-width: $screen-desktop) {
+      @include text($H600, 700, $text-black-color);
+      padding-top: 65px;
     }
   }
   &__text-first {
     @include text($H300, 400, $text-black-color);
     text-align: center;
-    margin-bottom: 34px;
     line-height: 24px;
     max-width: 560px;
     margin: 0 auto;
-    @media screen and (min-width: $screen-iphone) {
-      padding-left: 12px;
-      padding-right: 12px;
-      text-align: center;
-      margin-bottom: 24px;
-      line-height: 24px;
+    @extend %text-padding-lrb;
+    text-align: center;
+
+    line-height: 24px;
+    @media screen and (min-width: $screen-tablet) {
+      padding-bottom: 34px;
     }
   }
   &__text-second {
     @include text($H300, 400, $text-black-color);
     text-align: center;
-    margin-bottom: 30px;
     line-height: 24px;
     max-width: 447px;
     margin: 0 auto;
-    @media screen and (min-width: $screen-iphone) {
-      padding-left: 12px;
-      padding-right: 12px;
-      text-align: center;
-      margin-bottom: 24px;
-      line-height: 24px;
+    @extend %text-padding-lrb;
+    text-align: center;
+    line-height: 24px;
+    @media screen and (min-width: $screen-tablet) {
+      padding-bottom: 34px;
     }
   }
 }
