--- a/src/css/components/_about.scss
+++ b/src/css/components/_about.scss
@@ -48,4 +48,9 @@
       padding-bottom: 34px;
     }
   }
+  &__text-title {
+    display: block;
+    padding-left: 105px;
+    padding-right: 107px;
+  }
 }
