--- a/src/templates/about.html
+++ b/src/templates/about.html
@@ -2,7 +2,7 @@
     <div class="about__container">
         <div class="about__box">
             <fieldset class="about__border">
-                <legend align="center">&emsp;&emsp;&emsp;&emsp;ABOUT US&emsp;&emsp;&emsp;&emsp;</legend>
+                <legend align="center"><span class="about__text-title">ABOUT US</span></legend>
                 <p class="about__text-first">When you
                     work
                     with
