--- a/src/templates/footer.html
+++ b/src/templates/footer.html
@@ -2,7 +2,7 @@
     <div class="footer__container">
         <div class="footer__box">
             <fieldset class="footer__border">
-                <legend align="center">&emsp;&emsp;&emsp;&emsp;CONTACT US&emsp;&emsp;&emsp;&emsp;</legend>
+                <legend align="center"><span class="footer__text-title">CONTACT US</span></legend>
                 <p class="footer__text">Planning and development is iterative. Because we are constantly coding and
                     testing, the
                     products we build are always ready to go live. This iterative process allows for changes as
