--- a/src/templates/services.html
+++ b/src/templates/services.html
@@ -2,7 +2,7 @@
     <div class="services__container">
         <div class="services__box">
             <fieldset class="services__border">
-                <legend align="center">&emsp;&emsp;&emsp;&emsp;SERVICES&emsp;&emsp;&emsp;&emsp;</legend>
+                <legend align="center"><span class="services__border-title">SERVICES</span></legend>
                 <p class="services__text">Before we sign a contract or write a line of code our team will spend the
                     necessary time needed to understand your product vision.
                     The outcome of this scoping session is a proposal or high-level statement of work.
