--- a/src/templates/whatwedo.html
+++ b/src/templates/whatwedo.html
@@ -2,7 +2,7 @@
     <div class="what-we-do__container">
         <div class="what-we-do__box">
             <fieldset class="what-we-do__border">
-                <legend align="center">&emsp;&emsp;&emsp;&emsp;WHAT WE DO&emsp;&emsp;&emsp;&emsp;</legend>
+                <legend align="center"><span class="what-we-do__border-title">WHAT WE DO</span></legend>
                 <div class="what-we-do__design-box">
                     <div class="what-we-do__picture-wrapper">
                         <img class="what-we-do__picture" src="../images/design.svg" alt="DESIGN">
