--- a/src/templates/whatwedo.html
+++ b/src/templates/whatwedo.html
@@ -28,7 +28,7 @@
                 </div>
                 <div class="what-we-do__product-managment-box">
                     <div class="what-we-do__picture-wrapper">
-                        <img class="what-we-do__picture" src="../images/Product Management.svg" alt="PRODUCT MANAGMENT">
+                        <img class="what-we-do__picture" src="../images/product-management.svg" alt="PRODUCT MANAGMENT">
                     </div>
                     <p class="what-we-do__title">PRODUCT MANAGMENT</p>
                     <p class="what-we-do__text">Planning and development is iterative. Because we are constantly coding
