--- a/src/templates/header.html
+++ b/src/templates/header.html
@@ -1,6 +1,6 @@
 <header class="container-padding header">
     <section class="header__box">
-        <div class="logo header__logo"><img src="../images/logo.svg" alt="logo"></div>
+        <div class="logo header__logo"><img src="images/logo.svg" alt="logo"></div>
         <h1 class="header__title">WORKING<br>
             WITH DESIGN LAB
         </h1>
