--- a/src/templates/whatwedo.html
+++ b/src/templates/whatwedo.html
@@ -5,7 +5,7 @@
                 <legend align="center"><span class="what-we-do__border-title">WHAT WE DO</span></legend>
                 <div class="what-we-do__design-box">
                     <div class="what-we-do__picture-wrapper">
-                        <img class="what-we-do__picture" src="../images/design.svg" alt="DESIGN">
+                        <img class="what-we-do__picture" src="images/design.svg" alt="DESIGN">
                     </div>
                     <p class="what-we-do__title">DESIGN</p>
                     <p class="what-we-do__text">Our design practice offers a full range of services including branding
@@ -17,7 +17,7 @@
                 </div>
                 <div class="what-we-do__development-box">
                     <div class="what-we-do__picture-wrapper">
-                        <img class="what-we-do__picture" src="../images/Development.svg" alt="DEVELOPMENT">
+                        <img class="what-we-do__picture" src="images/development.svg" alt="DEVELOPMENT">
                     </div>
                     <p class="what-we-do__title">DEVELOPMENT</p>
                     <p class="what-we-do__text">All engineers are fluent in the latest enterprise, mobile and web
@@ -28,7 +28,7 @@
                 </div>
                 <div class="what-we-do__product-managment-box">
                     <div class="what-we-do__picture-wrapper">
-                        <img class="what-we-do__picture" src="../images/product-management.svg" alt="PRODUCT MANAGMENT">
+                        <img class="what-we-do__picture" src="images/product-management.svg" alt="PRODUCT MANAGMENT">
                     </div>
                     <p class="what-we-do__title">PRODUCT MANAGMENT</p>
                     <p class="what-we-do__text">Planning and development is iterative. Because we are constantly coding
