--- a/src/templates/footer.html
+++ b/src/templates/footer.html
@@ -2,7 +2,7 @@
     <div class="footer__container">
         <div class="footer__box">
             <fieldset class="footer__border">
-                <legend align="center"><span class="footer__text-title">CONTACT US</span></legend>
+                <legend class="footer__legend-align"><span class="footer__text-title">CONTACT US</span></legend>
                 <p class="footer__text">Planning and development is iterative. Because we are constantly coding and
                     testing, the
                     products we build are always ready to go live. This iterative process allows for changes as
@@ -14,7 +14,7 @@
             </fieldset>
             <div class="footer__box-end">
                 <div class="footer__image-wrapper">
-                    <!-- <img src="../images/logo.svg" alt="logo"> -->
+
                     <svg id="logo.svg" xmlns="http://www.w3.org/2000/svg" width="35" height="37" viewBox="0 0 69 71">
                         <defs>
                             <style>
