--- a/src/css/core/_common.scss
+++ b/src/css/core/_common.scss
@@ -16,6 +16,10 @@ a {
   text-decoration: none;
 }
 
+h2 {
+  font-size: 100%;
+}
+
 .container-padding {
   padding-left: 24px;
   padding-right: 24px;
