--- a/src/templates/about.html
+++ b/src/templates/about.html
@@ -2,7 +2,10 @@
     <div class="about__container">
         <div class="about__box">
             <fieldset class="about__border">
-                <legend class="about__legend-align"><span class="about__text-title">ABOUT US</span>
+                <legend class="about__legend-align">
+                    <h2 class="about__text-title">
+                        ABOUT US
+                    </h2>
                 </legend>
                 <p class="about__text-first">When you
                     work
