--- a/src/templates/footer.html
+++ b/src/templates/footer.html
@@ -2,7 +2,11 @@
     <div class="footer__container">
         <div class="footer__box">
             <fieldset class="footer__border">
-                <legend class="footer__legend-align"><span class="footer__text-title">CONTACT US</span></legend>
+                <legend class="footer__legend-align">
+                    <h2 class="footer__text-title">
+                        CONTACT US
+                    </h2>
+                </legend>
                 <p class="footer__text">Planning and development is iterative. Because we are constantly coding and
                     testing, the
                     products we build are always ready to go live. This iterative process allows for changes as
