--- a/src/templates/whatwedo.html
+++ b/src/templates/whatwedo.html
@@ -2,7 +2,10 @@
     <div class="what-we-do__container">
         <div class="what-we-do__box">
             <fieldset class="what-we-do__border">
-                <legend class="what-we-do__legend-align"><span class="what-we-do__border-title">WHAT WE DO</span>
+                <legend class="what-we-do__legend-align">
+                    <h2 class="what-we-do__border-title">
+                        WHAT WE DO
+                    </h2>
                 </legend>
                 <div class="what-we-do__design-box">
                     <div class="what-we-do__picture-wrapper">
