--- a/src/templates/services.html
+++ b/src/templates/services.html
@@ -2,7 +2,11 @@
     <div class="services__container">
         <div class="services__box">
             <fieldset class="services__border">
-                <legend class="services__legend-align"><span class="services__border-title">SERVICES</span></legend>
+                <legend class="services__legend-align">
+                    <h2 class="services__border-title">
+                        SERVICES
+                    </h2>
+                </legend>
                 <p class="services__text">Before we sign a contract or write a line of code our team will spend the
                     necessary time needed to understand your product vision.
                     The outcome of this scoping session is a proposal or high-level statement of work.
